--- a/app/index.html
+++ b/app/index.html
@@ -75,15 +75,14 @@
 				<!-- <div class="vert-pad"></div> -->
 				<p class="title">Global Health<br/>Film Festival
 				</p>
-				<p class="home-text" class="cushycms" title="Homepage Text" ><span class="strong">'The Right to Heal' Premier</span>
-				<br>
-				Saturday July 16th, 2013
-				<br>
-				Doors open 7pm
-				<br>
-				</p>
-				<p class="home-text pad" class="cushycms" title="Details">Movie @8pm followed by Panel Q+A and performance by XX 
-				</p>
+				<p class="cushycms" title="Homepage Text"><span class="strong">&#39;The Right to Heal&#39; Premier</span><br />
+Saturday July 8th, 2013<br />
+Doors open 7pm<br />
+<br />
+<br />
+&nbsp;</p>
+				<p class="cushycms" title="Details">The Global Health Film Festival is an exciting new event aimed to promote the necessity of Orthopedic Surgery in changing peoples lives.<br />
+A selection of moving films and documentaries followed by a night of music and drinks. Join us for a fun evening raising awareness of this vital issue!</p>
 			</div>
 
 		
