--- a/app/about.html
+++ b/app/about.html
@@ -18,25 +18,25 @@
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
-	<div class="row">
-		<div class="twelve columns">
-			<div id="social-icons">
+		<div class="row">
+			<div class="twelve columns">
+				<div id="social-icons">
 					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">
-							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
+						<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
 					</a>
 					<a href="https://twitter.com/therighttoheal" target="_blank">
-							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
+						<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
 					</a>
 					<a href="http://instagram.com/therighttoheal" target="_blank">
-							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
+						<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
 					</a>
+				</div>
 			</div>
 		</div>
-	</div>
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p class="cushycms" title="contact info">E: info@globalhealth.com | T: +01.415.206.4261</p>
+					<p class="cushycms" title="contact info">E: info@globalsurgery.com | T: +01.415.206.4261</p>
 				</div>
 			</div>
 		</div>
@@ -44,8 +44,7 @@
 		<div class="header row">
 			<div class="five columns">
 				<div class="logo-container">
-					<img src="images/ghff_logo_black.png">
-				</div>
+					<img src="images/ghff_logo_black.png"></div>
 			</div>
 			<div class="seven columns">
 				<ul class="main-nav nav">
@@ -94,54 +93,65 @@
 								<img src="http://placekitten.com/700/450">
 								<img src="http://placekitten.com/700/450">
 								<img src="http://placekitten.com/700/450">
-								<img src="http://placekitten.com/700/450">
-							</div>
+								<img src="http://placekitten.com/700/450"></div>
 						</div>
 					</div>
 					<div class="three columns">
-						<p class="cushycms" title="image text">three columns content goes here</p>
+						<p class="long-text pad">
+							Presently, 2 billion people have no access to the most basic surgical care. Many stand in the shadows of our conception of modern healthcare. Faceless, nameless voices.
+						</p>
+
+						<p class="long-text pad">
+							We are seeking to change that. The vast majority who have been afflicted by surgical diseases for which we have low-cost solutions today deserve a fighting chance to heal.
+						</p>
+
+						<p class="long-text pad">We have come to tell their story.</p>
 					</div>
 				</div>
 			</div>
 		</div>
 
 		<div class="footer row">
-		<div class="four columns">
-			<p class="strong"> Locate Us:
-			</p>
+			<div class="four columns">
+				<p class="strong">Locate Us:</p>
 				<p>
-						IGOT Global Health Film Festival
-						<br>
-						2550 23rd Street
-						<br>
-						Building 9, 2nd Floor
-						<br>
-						San Francisco, CA 94110
+					IGOT Global Health Film Festival
+					<br>
+					2550 23rd Street
+					<br>
+					Building 9, 2nd Floor
+					<br>San Francisco, CA 94110</p>
+			</div>
+			<div class="four columns">
+				<p class="strong">Show the love:</p>
+				<p>info@globalhealth.com</p>
+				<p>
+					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055">RSVP to the event</a>
 				</p>
+				<p>
+					<a href="https://www.change.org/petitions/congress-the-house-of-representatives-provide-basic-cost-effective-surgical-care-to-people-in-developing-worlds?" target="_blank">Sign the petition</a>
+				</p>
+				<p>
+					<a href="https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform" target="_blank">Join our mailing list</a>
+				</p>
+				<p>
+					<a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform" target="_blank">Volunteer</a>
+				</p>
+
+			</div>
+			<div class="four columns">
+				<p class="strong">Social Streams:</p>
+				<p>
+					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">Facebook</a>
+				</p>
+				<p>
+					<a href="https://twitter.com/therighttoheal" target="_blank">Twitter</a>
+				</p>
+				<p>
+					<a href="http://instagram.com/therighttoheal" target="_blank" >Instagram</a>
+				</p>
+			</div>
 		</div>
-		<div class="four columns">
-			<p class="strong">Show the love:</p>
-			<p>info@globalhealth.com</p>
-			<p><a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055">RSVP to the event</a></p>
-			<p> <a href="https://www.change.org/petitions/congress-the-house-of-representatives-provide-basic-cost-effective-surgical-care-to-people-in-developing-worlds?" target="_blank"> Sign the petition</a></p>
-			<p><a href="https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform" target="_blank">Join our mailing list</a></p>
-			<p><a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform" target="_blank">Volunteer</a></p>
-			
-			
-		</div>
-		<div class="four columns">
-		<p class="strong">Social Streams:</p>
-			<p>
-				<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">Facebook</a>
-			</p>
-			<p>
-				<a href="https://twitter.com/therighttoheal" target="_blank">Twitter</a>
-			</p>
-			<p>
-				<a href="http://instagram.com/therighttoheal" target="_blank" >Instagram</a>
-			</p>
-		</div>
-	</div>
 
 		<script src="javascripts/jquery.js"></script>
 		<script src="javascripts/foundation.min.js"></script>
