--- a/app/index.html
+++ b/app/index.html
@@ -18,124 +18,128 @@
 		<script src="javascripts/modernizr.foundation.js"></script>
 </head>
 <body>
-	<div class="row">
-		<div class="twelve columns">
-			<div id="social-icons">
+		<div class="row">
+			<div class="twelve columns">
+				<div id="social-icons">
 					<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">
-							<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
+						<img src="./images/facebook2.png" width="30" height="30" alt="Facebook"/>
 					</a>
 					<a href="https://twitter.com/therighttoheal" target="_blank">
-							<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
+						<img src="./images/twitter2.png" width="30" height="30" alt="Twitter"/>
 					</a>
 					<a href="http://instagram.com/therighttoheal" target="_blank">
-							<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
+						<img src="./images/instagram2.png" width="30" height="30" alt="Instagram"/>
 					</a>
+				</div>
 			</div>
 		</div>
-	</div>
-	<div class="meta row">
-		<div class="four columns offset-by-eight">
-			<div class="meta-content">
-				<p class="cushycms">E: info@globalhealth.com | T: +01.415.206.4261</p>
+		<div class="meta row">
+			<div class="four columns offset-by-eight">
+				<div class="meta-content">
+					<p class="cushycms">E: info@globalsurgery.com | T: +01.415.206.4261</p>
+				</div>
 			</div>
 		</div>
-	</div>
 
-	<div class="header row">
-		<div class="five columns">
-			<div class="logo-container">
-				<img src="images/ghff_logo_black.png">
+		<div class="header row">
+			<div class="five columns">
+				<div class="logo-container">
+					<img src="images/ghff_logo_black.png"></div>
 			</div>
-	</div>
-		<div class="seven columns">
-			<ul class="main-nav nav">
-				<li class="nav-item active">
-					<a href="index.html">Home</a>
-				</li>
-				<li class="nav-item">
-					<a href="about.html">About</a>
-				</li>
-				<li class="nav-item">
-					<a href="schedule.html">Schedule</a>
-				</li>
-				<li class="nav-item">
-					<a href="submit.html">Submit A Film</a>
-				</li>
-			</ul>
+			<div class="seven columns">
+				<ul class="main-nav nav">
+					<li class="nav-item active">
+						<a href="index.html">Home</a>
+					</li>
+					<li class="nav-item">
+						<a href="about.html">About</a>
+					</li>
+					<li class="nav-item">
+						<a href="schedule.html">Schedule</a>
+					</li>
+					<li class="nav-item">
+						<a href="submit.html">Submit A Film</a>
+					</li>
+				</ul>
+			</div>
 		</div>
-	</div>
 
-	<div class="body row">
-		<div class="nine columns">
-			<div class="video">
+		<div class="body row">
+			<div class="nine columns">
+				<div class="video">
 					<iframe src="http://player.vimeo.com/video/59388957" width="675" height="425" framexborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
-			</div>
+				</div>
 			</div>
 			<div class="three columns">
-				<!-- <div class="vert-pad"></div> -->
-				<p class="title">Global Health<br/>Film Festival
-				</p>
-				<p class="cushycms" title="Homepage Text"><span class="strong">&#39;The Right to Heal&#39; Premier</span><br />
-Saturday July 8th, 2013<br />
-Doors open 7pm<br />
-<br />
-<br />
-&nbsp;</p>
-				<p class="cushycms" title="Details">The Global Health Film Festival is an exciting new event aimed to promote the necessity of Orthopedic Surgery in changing peoples lives.<br />
-A selection of moving films and documentaries followed by a night of music and drinks. Join us for a fun evening raising awareness of this vital issue!</p>
+				<!-- <div class="vert-pad"></div>
+			-->
+			<p class="title">
+				Global Health
+				<br/>
+				Film Festival
+			</p>
+			<p>
+				<span class="strong long-text">The Right to Heal Premier</span>
+				<span class="strong long-text">Saturday, July 8, 2013</span>
+				<br />
+				<span class="strong long-text">Doors open at 7pm</span>
+				<br />
+			</p>
+			<p class="long-text pad">
+				The Global Health Film Festival aims to bring awareness to the necessity of surgical care in developing countries.
+				<p>
+
+					<p class="long-text pad">
+						A selection of moving films and documentaries will be followed by a night of music and drinks. Join us for a fun evening raising awareness on this important, yet largely undiscovered issue.
+					</p>
+				</div>
+
+				<div class="twelve columns"></div>
 			</div>
 
-		
-		<div class="twelve columns">
-		</div>
-	</div>
+			<div class="footer row">
+				<div class="four columns">
+					<p class="strong">Locate Us:</p>
+					<p>
+						IGOT Global Health Film Festival
+						<br>
+						2550 23rd Street
+						<br>
+						Building 9, 2nd Floor
+						<br>San Francisco, CA 94110</p>
+				</div>
+				<div class="four columns">
+					<p class="strong">Show the love:</p>
 
-	<div class="footer row">
-		<div class="four columns">
-			<p class="strong">Locate Us:</p>
-			<p>
-				IGOT Global Health Film Festival
-				<br>	
-				2550 23rd Street
-				<br>	
-				Building 9, 2nd Floor
-				<br>	
-				San Francisco, CA 94110
-			</p>
+					<p>
+						<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="blank">RSVP to the event</a>
+					</p>
+					<p>
+						<a href="https://www.change.org/petitions/congress-the-house-of-representatives-provide-basic-cost-effective-surgical-care-to-people-in-developing-worlds?" target="_blank">Sign the petition</a>
+					</p>
+					<p>
+						<a href="https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform" target="_blank">Join our mailing list</a>
+					</p>
+					<p>
+						<a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform" target="_blank">Volunteer</a>
+					</p>
+				</div>
+				<div class="four columns">
+					<p class="strong">Social Streams:</p>
+					<p>
+						<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">Facebook</a>
+					</p>
+					<p>
+						<a href="https://twitter.com/therighttoheal" target="_blank">Twitter</a>
+					</p>
+					<p>
+						<a href="http://instagram.com/therighttoheal" target="_blank">Instagram</a>
+					</p>
+				</div>
 			</div>
-		<div class="four columns">
-			<p class="strong">Show the love:</p>
-			
-			<p>
-				<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="blank">RSVP to the event</a>
-			</p>
-			<p>
-				<a href="https://www.change.org/petitions/congress-the-house-of-representatives-provide-basic-cost-effective-surgical-care-to-people-in-developing-worlds?" target="_blank">Sign the petition</a>
-			</p>
-			<p>
-				<a href="https://docs.google.com/forms/d/12FSZOiDSsSCPTXuq11Jjxkp9dNozNjuwHWkG1YHQ5UY/viewform" target="_blank">Join our mailing list</a>
-			</p>
-			<p>
-				<a href="https://docs.google.com/forms/d/1S2gHF3fMmlGTIOgRogL9raWdZubqyUNSwYppbELZEA8/viewform" target="_blank">Volunteer</a>
-			</p>
-		</div>
-		<div class="four columns">
-			<p class="strong">Social Streams:</p>
-			<p>
-				<a href="https://www.facebook.com/pages/The-Right-To-Heal/133752193461055" target="_blank">Facebook</a>
-			</p>
-			<p>
-				<a href="https://twitter.com/therighttoheal" target="_blank">Twitter</a>
-			</p>
-			<p>
-				<a href="http://instagram.com/therighttoheal" target="_blank">Instagram</a>
-			</p>
-		</div>
-	</div>
 
-	
-	<script src="javascripts/jquery.js"></script>
-	<script src="javascripts/foundation.min.js"></script>
-	<script src="javascripts/app.js"></script>
+			<script src="javascripts/jquery.js"></script>
+			<script src="javascripts/foundation.min.js"></script>
+			<script src="javascripts/app.js"></script>
 </body>
-</html>
+		</html>
