Updated who page
edited image and text

--- a/app/who.html
+++ b/app/who.html
@@ -35,7 +35,7 @@
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p class="cushycms">E: info@globalhealth.com | T: +01.415.206.4261</p>
+					<p class="cushycms">E: info@globalsurgery.com | T: +01.415.206.4261</p>
 				</div>
 			</div>
 		</div>
@@ -89,7 +89,7 @@
 					<div class="twelve columns">
 						<div class="cushycms" title="description">
 							<p class="long-text pad">
-								The Global Health Film Festival (GHFF) is hosted by the Institute for Global Orthopedics and Traumatology in collaboration with__________. Our team is comprised of x y and z.
+								The Global Health Film Festival (GHFF) is hosted by the Institute for Global Orthopedics and Traumatology in collaboration with LIM Innovations and Own 2 Feet.
 							</p>
 						</div>
 					</div>
@@ -98,73 +98,69 @@
 					<div class="three columns">
 						<div class="cushycms" title="image 1 200x150">
 							<div class="partner-image">
-								<img src="http://placehold.it/200x150&text=image+two+here">
+								<img alt="" src="who_7_1493935422.jpg"/>
 							</div>
 						</div>
 					</div>
 					<div class="nine columns">
-						<div class="cushycms" title="text 1">
-							<div class="partner-text">
-								<p class="name">Amber Caldwell</p>
-								<p class="long-text pad">
-									This is the description of Amber.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-								</p>
-							</div>
+						<div class="partner-text">
+							<p class="name">Amber Caldwell</p>
+
+							<p class="long-text pad">
+								Amber is non-profit director, writer, global health policy specialist and advocate for Surgery as part of the greater trauma health system. She graduated from University of California, Santa Barbara (UCSB) in 2004 with a Bachelor Degree in Global and International Studies, emphasizing in Cultural Ideology and a minor in Sports Medicine. Amber serves as the Director of Development for IGOT the Institute for Global Orthopaedics and Traumatology, a non-profit within the UCSF Department of Orthopaedic Surgery.IGOT is dedicated to improving the capacity for orthopaedic trauma surgery globally through research and teaching exchange programs. Amber has always been moved by the stories of patients who do not have access to safe surgery and suffer from trauma injuries locally and globally.
+							</p>
 						</div>
+
 					</div>
 				</div>
 				<div class="row">
 					<div class="three columns">
-						<div class="cushycms" title="image 2 200x150">
-							<div class="partner-image">
-								<img src="http://placehold.it/200x150&text=image+two+here">
-							</div>
+						<div class="partner-image">
+							<img src="who_7_1079549858.JPG" height="150" width="200" />
 						</div>
+
 					</div>
 					<div class="nine columns">
-						<div class="cushycms" title="text 2">
 							<div class="partner-text">
-								<p class="name">Jaymie Henry-Ang:</p>
+								<p class="name">Jaymie Ang Henry</p>
 								<p class="long-text pad">
-									This is the description of partner Jaymie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+									Jaymie obtained her medical degree from the University of Santo Tomas Faculty of Medicine and Surgery in Manila, Philippines, and a masters in Public Health (MPH) at the University of California, Berkeley School of Public Health. Jaymie started her training in General Surgery at the Mount Sinai Hospital (NY), is an international surgical fellow at Surgeons OverSeas (SOS), ambassador at Institute for Global Orthopedics and Traumatology, and researcher at the World Health Organization Violence and Injury Prevention and Disability. She is also a co-founder and Executive Board member of the International Collaboration for Essential Surgery (ICES), dedicated to promoting essential surgery in developing countries; and the producer, writer, and director of the film dedicated to Global Surgery issues, <em>The Right to Heal</em>
+									.
 								</p>
 							</div>
-						</div>
 					</div>
 				</div>
 				<div class="row vert-pad">
 					<div class="three columns">
-						<div class="cushycms" title="image 3 200x150">
-							<div class="partner-image">
-								<img src="http://placehold.it/200x150&text=image+two+here">
-							</div>
+						<div class="partner-image">
+							<img alt="Andrew" src="who_7_386115917.JPG" width="200" height="150"/>
 						</div>
 					</div>
+
 					<div class="nine columns">
-						<div class="cushycms" title="text 3">
-							<div class="partner-text">
-								<p class="name">Andrew Pedkte</p>
-								<p class="long-text pad">
-									This is the description of partner Andrew.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-								</p>
-							</div>
+						<div class="partner-text">
+							<p class="name">Andrew Pedkte</p>
+
+							<p class="long-text pad">
+								Andrew earned his undergraduate degree in 2001 from the University of Virginia in international medical practice and policy. He returned to his home city of Minneapolis and completed medical school at University of Minnesota in 2008. Andrew is currently a chief resident in orthopaedic surgery at UCSF. He has traveled extensively to developing and developed countries evaluating surgical need and providing surgical care. He was honored as the orthopaedic surgery global health scholar at UCSF for his field and academic work regarding surgical care in developing countries. Andrew is also co-founder and CEO of LIM Innovations Inc, an organization working to develop prosthetic solutions for amputees and those facing limb threatening conditions both locally and globally.
+							</p>
 						</div>
 					</div>
 				</div>
+
 				<div class="row">
 					<div class="three columns">
-						<div class="cushycms" title="image 4 200x150">
 							<div class="partner-image">
-								<img src="http://placehold.it/200x150&text=image+two+here">
+								<img alt="" src="who_6_1852985413.png" width="200" height="150"/>
 							</div>
-						</div>
 					</div>
 					<div class="nine columns">
 						<div class="cushycms" title="text 4">
 							<div class="partner-text">
-								<p class="name">Stephanie Tomasky</p>
+								<p class="name">Zak Armitage</p>
+
 								<p class="long-text pad">
-									This is the description of partner Stephanie.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+									Zak is a Business and Politics graduate from the University of Liverpool, England, specilizing in marketing and PR management. In 2010 he won the Young Enterprise Award for most profitable company as a Marketing Director. Zak also studied medical political policy extensively during his degree and interned with the National Health Service, Public Health Department. Since graduating Zak has travelled extensively and excelled as a Sales Manager at Elysium Marketing in England. In December 2012 he co-founded Bless Clothing Ltd, an independent men's and women's street wear clothing brand. In March 2013 Zak relocated to San Francisco where he currently works at LIM Innovations managing marketing and PR projects.
 								</p>
 							</div>
 						</div>
