--- a/app/partners.html
+++ b/app/partners.html
@@ -36,7 +36,7 @@
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p class="cushycms">E: info@globalhealth.com | T: +01.415.206.4261</p>
+					<p class="cushycms">E: info@globalsurgery.com | T: +01.415.206.4261</p>
 				</div>
 			</div>
 		</div>
@@ -88,78 +88,63 @@
 				</div>
 				<div class="row vert-pad">
 					<div class="three columns">
-						<div class="cushycms" title="Partner 1 200x150">
-							<div class="partner-image">
-								<img src="http://placehold.it/200x150&text=image+two+here">
-							</div>
+						<div class="partner-image top-pad">
+							<img height="56" src="partners_19_3177101766.png" style="float: left;" width="259" />
 						</div>
+
 					</div>
 					<div class="nine columns">
-						<div class="cushycms" title="Partner 1 text">
-							<div class="partner-text">
-								<p class="name">IGOT</p>
-								<p class="long-text pad">
-									This is the description of partner one.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-								</p>
-							</div>
+						<div class="partner-text">
+							<p class="name">Institute for Global Orthopedics and Traumatology (IGOT)</p>
+							<p class="long-text pad">
+								The Institute for Global Orthopedics and Traumatology is a non-profit organization dedicated to improve the care of underserved populations affected by orthopaedic trauma injuries worldwide. IGOT's work is rooted in a commitment to long-term sustainability and impact and spans efforts to improve education, research, and advocacy for surgical care in developing countries.
+							</p>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="three columns">
-						<div class="cushycms" title="Parter 2 200x150">
-							<div class="partner-image">
-								<img src="http://placehold.it/200x150&text=image+two+here">
-							</div>
+						<div class="partner-image">
+							<img height="197" src="partners_20_522517617.jpg" style="float: left;" width="144" />
 						</div>
 					</div>
 					<div class="nine columns">
-						<div class="cushycms" title="Partner 2 text">
-							<div class="partner-text">
-								<p class="name">GPAS</p>
-								<p class="long-text pad">
-									This is the description of partner two.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-								</p>
-							</div>
+						<div class="partner-text">
+							<p class="name">International Collaboration for Essential Surgery (ICES)</p>
 						</div>
-
+						<p class="long-text pad">
+							The International Collaboration for Essential Surgery is a group of experts in the field of international surgical care dedicated to promoting the effective provision of essential low-cost surgical care to save lives and prevent serious disability in low-resource settings.
+						</p>
 					</div>
 				</div>
 				<div class="row vert-pad">
 					<div class="three columns">
-						<div class="cushycms" title="Parter 3 200x150">
-							<div class="partner-image">
-								<img src="http://placehold.it/200x150&text=image+two+here">
-							</div>
+						<div class="partner-image">
+							<img src="partners_27_2654387942.png" style="width: 248px; height: 100px;" />
 						</div>
 					</div>
 					<div class="nine columns">
-						<div class="cushycms" title="Partner 3 text">
-							<div class="partner-text">
-								<p class="name">Own2Feet</p>
-								<p class="long-text pad">
-									This is the description of partner three.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-								</p>
-							</div>
+						<div class="partner-text">
+							<p class="name">Own2Feet</p>
 						</div>
+
+						<p class="long-text pad">
+							Own2Feet is a non-profit organization dedicated to improving the quality of life for diabetic patients and amputees by developing affordable, sustainable solutions. Own2Feet is committed to empowering local communities by teaching skills in prosthetic fabrication and management while promoting diabetic awareness and amputation prevention.
+						</p>
 					</div>
 				</div>
 				<div class="row">
 					<div class="three columns">
-						<div class="cushycms" title="Partner 4 200x150">
-							<div class="partner-image">
-								<img src="http://placehold.it/200x150&text=image+two+here">
-							</div>
+						<div class="partner-image">
+							<img height="116" src="partners_22_880718891.png" width="127" />
 						</div>
 					</div>
 					<div class="nine columns">
-						<div class="cushycms" title="partner 4 text">
-							<div class="partner-text">
-								<p class="name">ALittle4Alot</p>
-								<p class="long-text pad">
-									This is the description of partner four.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-								</p>
-							</div>
+						<div class="partner-text">
+							<p class="name">ALittle4Alot</p>
+							<p class="long-text pad">
+								ALittle4Alot is a non-profit organization which aims to help women who have undergone surgical repair of obstetric fistulas return to school or receive vocational skills training.
+							</p>
 						</div>
 					</div>
 				</div>
