--- a/app/submit.html
+++ b/app/submit.html
@@ -88,7 +88,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="row vert-pad">
+				<div class="row pad">
 					<div class="seven columns half">
 						<p class="strong half">
 							We are looking for 15-20 minute films.Project must fit GHFF's categories. We currently support films in the following categories with some examples:
@@ -102,7 +102,7 @@
 						<p class="small">Injuries</p>
 						<p class="small">Other essestial surgical conditions</p>
 						<p class="small">Emergency Care</p>
-						<p class="half strong vert-pad">
+						<p class="half strong pad">
 							Projects must explore a discrete issue in any of the categories mentioned. We are particularly interested in projects that also display:
 						</p>
 						<p class="small">Creative and innovative storytelling</p>
@@ -111,14 +111,13 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="twelve columns vert-pad">
+					<div class="twelve columns pad">
 						<p class="half strong">
 							We do not accept films advertising a charity, NGO, NPO, or any commercial product, whether implicit or explicit in the film. Submitted films should either be in English or include English subtitles.
 								If a film is selected for theater presentation at the festival it is the responsibility of the filmmaker to provide GHFF with either an HDCAM tape or a 35mm film exhibition copy by June 15, 2013.
 						</p>
 					</div>
 				</div>
-
 			</div>
 		</div>
 
