--- a/app/why.html
+++ b/app/why.html
@@ -35,7 +35,7 @@
 		<div class="meta row">
 			<div class="four columns offset-by-eight">
 				<div class="meta-content">
-					<p class="cushycms">E: info@globalhealth.com | T: +01.415.206.4261</p>
+					<p class="cushycms">E: info@globalsurgery.com | T: +01.415.206.4261</p>
 				</div>
 			</div>
 		</div>
@@ -87,56 +87,38 @@
 				</div>
 				<div class="row">
 					<div class="twelve columns">
-						<div class="cushycms" title="Why Description Top">
-							<p class="long-text pad">
-								The Global Health Film Festival is an attempt to bring neglected global health issues to light.  The films and organizations supporting the festival are dedicated to awareness, advocacy and activism to ensure that the below issues have platforms on the greater health agenda locally and globally:
-							</p>
-						</div>
+						<p class="long-text pad">The Global Health Film Festival is an attempt to bring neglected global health issues to light. The films and organizations supporting the festival are dedicated to awareness, advocacy and activism to ensure that critical issues in the delivery of surgical care worldwide have platforms on the greater health agenda both locally and globally.</p>
+
 					</div>
 				</div>
 				<div class="row vert-pad">
 					<div class="twelve columns">
 						<p class="name">Safe, effective surgery globally</p>
-						<div class="cushycms" title="Fact 1 description">
-							<p class="long-text">
-								Did you know XX% of the world die or are disabled due to lack of access to surgery
-							</p>
-						</div>
+						<p class="long-text">2 Billion people have no access to basic surgical care worldwide. Where there is access in developing countries, rates of surgical site infections can be as high as 30%.</p>
 					</div>
 				</div>
 				<div class="row">
 					<div class="twelve columns">
 						<p class="name">Safe, clean and effective hospital systems</p>
-						<div class="cushycms" title="Fact 2 description">
-							<p class="long-text">
-								Did you know that in most developing countries the ratio of access to a functional hospital is XX per XX population, in comparison the hospital to population ration in San Francisco alone is XX per XX
-							</p>
-						</div>
+						<p class="long-text">64 countries spend less than $50 per person per year in health spending worldwide.</p>
 					</div>
 				</div>
 				<div class="row vert-pad">
 					<div class="twelve columns">
 						<p class="name">Access to rehabilitation and therapy</p>
-						<div class="cushycms" title="Fact 3 description">
-							<p class="long-text">
-								Did you know that XX% of amputees in developing countries have no access to wheelchairs, crutches or rehabilitation
-							</p>
-							<div class="cushycms" title="Fact 3 description"></div>
-						</div>
+						<p class="long-text">80% of people with disabilities live in developing countries- most have no access to healthcare services.</p>
+					</div>
+				</div>
 						<div class="row">
 							<div class="twelve columns">
 								<p class="name">Public policy and resource allocation for surgical systems</p>
-								<div class="cushycms" title="Fact 4 description">
-									<p class="long-text">
-										Did you know that Road Traffic Accidents account for XX% of deaths and disability globally yet only XX countries have established road traffic laws and regulations
-									</p>
-								</div>
+								<p class="long-text">Road Traffic Accidents account for 1.24 million deaths globally yet only 28 countries have established road traffic laws and regulations.</p>
 							</div>
 						</div>
 						<div class="pad">
 						</div>
-					</div>
-				</div>
+					
+				
 			</div>
 		</div>
 
